<resources>
    <string name="app_name">Apprender</string>
    <string name="logotipo">logotipo de la aplicación</string>

    <!-- Strings para pantalla Walkthrough-->
    <string name="description1">
        A continuación, te brindaremos
        las instrucciones y la forma de
        utilizar con la aplicación.
    </string>
    <string name="description2">
        Tendrás instrucciones de audio y
        reconocimiento de voz para interactuar
        con la aplicación.
    </string>
    <string name="description3">
        Iras avanzando por el contenido,
        desarrollando el aprendizaje a tu
        propio ritmo.
    </string>

    <!-- Strings para pantalla de inicio de registro-->
    <string name="registryDescription">
        A continuación, desarrollaras tu
        primera actividad.

        Ingresaras algunos datos por
        medio de las herramientas que te
        entregaremos a modo que te
        familiarices con la aplicación.
    </string>

    <string name="registryTittle">Comencemos</string>

    <string name="text_btn_start">Iniciar</string>
    <string name="guardar">Guardar</string>
    <string name="volver">Volver</string>
    <string name="btn_login_registrar">Iniciar registro</string>
    <string name="btn_login_ingresar">Ingresar</string>
    <string name="btn_registry_comenzar">Comenzar</string>
    <string name="label_login_input">Rut o DNI</string>

    <!-- Strings para fragments de registro de usuario-->
    <string name="question1">¿Cuál es tu nombre?</string>
    <string name="question2">¿Cuál es tu Apellido?</string>
    <string name="question3">¿Cuantos años tienes?</string>
    <string name="question4">¿Cuál es tu Rut?</string>
    <string name="question5">¿Cuál es tu sexo?</string>
    <string name="verificar">Verificar</string>
    <string name="continuar">Continuar</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="otro">Otro</string>
    <string name="datos">Tus datos</string>
    <string name="felicitaciones">Felicitaciones</string>
    <string name="iniciar">Iniciar</string>
    <string name="nombre">Nombre:</string>
    <string name="edad">Edad:</string>
    <string name="rut">Rut:</string>
    <string name="Genero">Genero:</string>

    <string name="confirm_message"> has terminado tu registro</string>

    <!--Content Description-->
    <string name="ic_check_registry">Check_img</string>
    <string name="chapter_img">Fondos para capitulos</string>
    <string name="play_image">Play image</string>
    <string name="x_close">Close image</string>
    <string name="back_button">Back image</string>
    <string name="img_encuesta">encuesta icon</string>

    <!--Titles navigation bottom-->
    <string name="capitulos">Capitulos</string>
    <string name="perfil">Perfil</string>
    <string name="ayuda">Ayuda</string>

    <!--Titles activity-->
    <string name="capitulo_1">Capitulo 1</string>
    <string name="capitulo_2">Capitulo 2</string>
    <string name="encuesta">Encuesta de satisfacción</string>

    <!--Vocales-->
    <string name="a">a</string>
    <string name="e">e</string>
    <string name="i">i</string>
    <string name="o">o</string>
    <string name="u">u</string>

    <!--Sílabas-->
    <string name="silabas_1">ta  -  te  -  ti  -  to  -  tu</string>
    <string name="silabas_2">ma - me - mi - mo - mu</string>
    <string name="silabas_3">da  -  de  -  di  -  do  -  du</string>

    <!-- Palabras para lectura -->
    <string name="meta">meta</string>
    <string name="dado">dado</string>
    <string name="tomate">tomate</string>

    <!-- Oraciones para lectura -->
    <string name="oracion_1">tito me ama</string>
    <string name="oracion_2">mi tía ama a mi tío</string>
    <string name="oracion_3">mi tía me da mote</string>

    <!-- Strings para Fragment de confirmación de lecciones -->
    <string name="leccion_datos">Datos de la lección</string>
    <string name="puntaje">Puntaje</string>
    <string name="Tiempo">Tiempo</string>
    <string name="correctas">Correctas</string>
    <string name="incorrectas">Incorrectas</string>
    <string name="timer">00:00</string>

    <!-- Strings para Dialog confirm de las lecciones -->
    <string name="fin_leccion">Fin de la lección</string>
    <string name="confirm_desc">Continua aprendiendo</string>
    <string name="fin_encuesta">Encuesta enviada</string>

    <!-- Strings para Dialog close de las lecciones -->
    <string name="perder_avance">Perderás tu avance</string>
    <string name="cerrar_leccion">¿deseas cerrar la lección?</string>
    <string name="cerrar_registro">¿deseas cerrar el registro?</string>
    <string name="cerrar_encuesta">¿deseas cerrar la encuesta?</string>
    <string name="si_dialog">Si</string>
    <string name="no_dialog">No</string>

    <!-- String para intro encuesta de satisfacción-->
    <string name="titulo_intro_encuesta">Encuesta de satisfacción</string>
    <string name="descripcion_intro_encuesta">
        Tu opinión es importante para nosotros, esto
        permitirá entregar una mejor herramienta para
        el aprendizaje de la lectura.

        Escucha las preguntas y responde evaluando de 1 a 3.
    </string>

    <string name="pregunta_encuesta_1">¿Fue buena la experiencia al usar la aplicación móvil?</string>
    <string name="pregunta_encuesta_2">¿Fue un juego fluido y de fácil comprensión?</string>
    <string name="pregunta_encuesta_3">¿Considera que aprendió usando la aplicación?</string>

    <string name="satisfecho">Satisfecho</string>
    <string name="insatisfecho">Insatisfecho</string>
    <string name="muy_satisfecho">Muy Satisfecho</string>

    <string name="siguiente">Siguiente</string>
    <string name="finalizar_encuesta">Finalizar encuesta</string>
    <string name="titulo_encuesta_confirm">Gracias por darnos tu opinión</string>

    <!-- Strings para perfil de usuario-->
    <string name="descripcion_profile">Observa tus logros y lecciones superadas</string>
    <string name="capitulo1">Capitulo 1</string>
    <string name="capitulo2">Capitulo 1</string>
    <string name="superar_leccion">"aun no has superado ninguna lección!!"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="en_construccion">En construcción</string>
    <string name="ingresa_rut">Rut sin guión ni DV</string>

</resources>
