<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <ImageView
            android:src="@drawable/ic_check_registry"
            android:contentDescription="@string/ic_check_registry"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/felicitaciones"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:padding="10dp"/>

    <TextView
        android:text="@string/confirm_message"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"/>

    <Button
        android:id="@+id/btnStartMain"
        android:text="@string/iniciar"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"
        android:background="@drawable/btn_short_shape"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"/>

</LinearLayout>