<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <ImageView
            android:src="@drawable/ic_close_leccion"
            android:contentDescription="@string/ic_check_registry"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perder_avance"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:padding="10dp"/>

    <TextView
            android:id="@+id/txt_close_dialog"
            android:text="@string/cerrar_encuesta"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

    <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/btn_no"
                android:text="@string/no_dialog"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textAllCaps="false"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@drawable/btn_short_shape"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_width="96dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"/>

        <Button
                android:id="@+id/btn_si"
                android:text="@string/si_dialog"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:textSize="20sp"
                style="?android:attr/buttonBarButtonStyle"
                android:textAllCaps="false"
                android:background="@drawable/btn_short_shape"
                android:backgroundTint="@color/grey_unchecked"
                android:layout_width="96dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"/>
    </LinearLayout>

</LinearLayout>