<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/confirmFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".view.fragments.VocalesTwoConfirmFragment">

    <Button
            android:id="@+id/btnAudioConfirm"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_width="46dp"
            android:layout_height="47dp"
            android:background="@drawable/btn_circle_line"
            android:drawableEnd="@drawable/ic_volume_up_black"
            android:paddingEnd="5dp" />

    <TextView
            android:id="@+id/tusDatos"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leccion_datos"
            android:textAlignment="center"
            android:textSize="32sp" />

    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:rowCount="4"
            android:columnCount="2">

        <!-- Labels-->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puntaje"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tiempo"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correctas"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrectas"
                android:textSize="22sp"
                android:textColor="@color/textColor"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_margin="10dp"/>

        <!-- Datos -->
        <TextView
                android:id="@+id/txtPuntaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="10dp"/>

        <TextView
                android:id="@+id/txtTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_margin="10dp"/>

        <TextView
                android:id="@+id/txtCorrectas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_margin="10dp"/>

        <TextView
                android:id="@+id/txtIncorrectas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_margin="10dp"/>
    </GridLayout>

    <Button
            android:id="@+id/btn_guardar"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/btn_short_shape"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/guardar"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textAllCaps="false" />

</LinearLayout>