<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragments.ProfileFragment">

    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile_circle_black"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    <TextView
            android:id="@+id/saludo_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Hola Pablo"
            android:textSize="20sp"
            android:textColor="@color/textColor"
            android:layout_gravity="center"/>

    <TextView
            android:id="@+id/puntaje_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_profile"
            tools:text="Observa tus logros y lecciones superadas"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:layout_gravity="center"/>

    <TextView
            android:id="@+id/txt_capitulo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Capitulo 1"
            android:text="@string/capitulo1"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:layout_margin="10dp"
            android:layout_gravity="start"/>

    <FrameLayout
            android:id="@+id/leccion1_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

        <ProgressBar
                android:id="@+id/profile_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:indeterminate="true"/>

        <TextView
                android:id="@+id/txt_mensaje"
                android:drawableTop="@drawable/ic_mood_bad"
                android:text="@string/superar_leccion"
                android:layout_width="wrap_content"
                android:textColor="@color/grey_unchecked"
                android:textSize="15sp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_leccion1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </FrameLayout>
</LinearLayout>