<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_centerInParent="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="10dp"
        android:elevation="5dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">

        <ImageView
                android:id="@+id/img_dialog"
                android:src="@drawable/ic_check_registry"
                android:contentDescription="@string/ic_check_registry"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>

        <TextView
                android:id="@+id/titulo_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Titulo"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:padding="10dp"/>

        <TextView
                android:id="@+id/descripcion_dialog"
                android:textSize="18sp"
                android:layout_gravity="center"
                tools:text="descripción"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>

        <Button
                android:id="@+id/btnStartMain"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                tools:text="Iniciar"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:background="@drawable/btn_short_shape"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"/>

        <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/btn_no"
                    android:text="@string/no_dialog"
                    android:textColor="@color/colorWhite"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/btn_short_shape"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:layout_width="96dp"
                    android:layout_height="40dp"
                    android:layout_margin="15dp"/>

            <Button
                    android:id="@+id/btn_si"
                    android:text="@string/si_dialog"
                    android:textColor="@color/colorWhite"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_short_shape"
                    android:backgroundTint="@color/grey_unchecked"
                    android:layout_width="96dp"
                    android:layout_height="40dp"
                    android:layout_margin="15dp"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>